--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
   <body>
     <header>
       <h1>Looking For Wonders?</h1>
-      <div><a href="#">Click Here</a>
+      <div>
+        <a href="#quote">Click Here</a>
       </div>
     </header>
-    <p>Stuff your eyes with wonder. Live as if you'd drop dead in ten seconds. See the world. It's more fantastic than any dream made or paid for in factories. Ask no guarantees, ask for no security, there never was such an animal. And if there were, it would be related to the great sloth which hangs upside down in a tree all day every day, sleeping its life away. To hell with that. Shake the tree and knock the great sloth down on his ass.</p>
-    <p>Ray Bradbury, Fahrenheit 451</p>
+    <div id=quote>
+      <p>Stuff your eyes with wonder. Live as if you'd drop dead in ten seconds. See the world. It's more fantastic than any dream made or paid for in factories. Ask no guarantees, ask for no security, there never was such an animal. And if there were, it would be related to the great sloth which hangs upside down in a tree all day every day, sleeping its life away. To hell with that. Shake the tree and knock the great sloth down on his ass.</p>
+      <p class=author>Ray Bradbury, Fahrenheit 451</p>
+    </div>
+    <footer>
+      <p class="heart">Made with <span class="love">&#10084;</span> in Thailand</p>
+    </footer>
   </body>
 </html>
